# src/requestmodels/game_request_model.go
@@ -2,9 +2,6 @@ package requestmodels
 
 import (
 	"cricket-scoreboard-api/src/models"
-	"errors"
-
-	"github.com/gin-gonic/gin"
 )
 
 // SeriesCreateModel godoc
@@ -55,86 +52,16 @@ type UpdateSquadModel struct {
 	RemovedPlayer []string `json:"removedPlayer" form:"removedplayer" xml:"removedPlayer"`
 }
 
+// MatchPlayingSquadModel godoc
+// @Summary Define match squad update model
+type MatchPlayingSquadModel struct {
+	TeamID  string   `json:"teamId" form:"teamid" xml:"teamId" binding:"required"`
+	Players []string `json:"players" form:"players" xml:"players"`
+	Extras  []string `json:"extras" form:"extras" xml:"extras"`
+}
+
 // UpdateSeriesStatusModel godoc
 // @Summary Define Series status update model
 type UpdateSeriesStatusModel struct {
 	Status models.SeriesState `json:"status" form:"status" xml:"status" binding:"required"`
-}
-
-//ValidateUpdateSeriesStatusRequests godoc
-// @Summary validates the incoming requests
-func ValidateUpdateSeriesStatusRequests(c *gin.Context) (UpdateSeriesStatusModel, error) {
-	model := UpdateSeriesStatusModel{}
-	if err := c.ShouldBind(&model); err != nil {
-		return model, err
-	}
-
-	return model, nil
-}
-
-//ValidateUpdateSquadRequests godoc
-// @Summary validates the incoming requests
-func ValidateUpdateSquadRequests(c *gin.Context) (UpdateSquadModel, error) {
-	model := UpdateSquadModel{}
-	if err := c.ShouldBind(&model); err != nil {
-		return model, err
-	}
-
-	return model, nil
-}
-
-//ValidateCreateMatchesRequests godoc
-// @Summary validates the incoming requests
-func ValidateCreateMatchesRequests(c *gin.Context) (MatchCreateModel, error) {
-	model := MatchCreateModel{}
-	if err := c.ShouldBind(&model); err != nil {
-		return model, err
-	}
-
-	if len(model.Matches) < 1 {
-		return model, errors.New("Minimum number of match")
-	}
-
-	for i := range model.Matches {
-		if len(model.Matches[i].Participants) != 2 {
-			return model, errors.New("Match should contains 2 teams")
-		}
-	}
-
-	return model, nil
-}
-
-//ValidateCreateSeriesRequests method validates the requests payload of CreateSeries method
-func ValidateCreateSeriesRequests(c *gin.Context) (SeriesCreateModel, error) {
-	model := SeriesCreateModel{}
-	model.Teams = []SeriesParticipantModel{}
-	if err := c.ShouldBind(&model); err != nil {
-		return model, err
-	}
-
-	if model.GameType == models.Bilateral && len(model.Teams) > 2 {
-		return model, errors.New("Invalid data, bilateral series only have max 2 teams")
-	}
-
-	return model, nil
-}
-
-//ValidateAddTeamRequests method validates the requests payload of AddTeams and Teams method
-func ValidateAddTeamRequests(c *gin.Context) (TeamsAddModel, error) {
-	model := TeamsAddModel{}
-	if err := c.ShouldBind(&model); err != nil {
-		return model, err
-	}
-
-	return model, nil
-}
-
-//ValidateRemoveTeamRequests method validates the requests payload of RemoveTeams and Teams method
-func ValidateRemoveTeamRequests(c *gin.Context) (TeamsRemoveModel, error) {
-	model := TeamsRemoveModel{}
-	if err := c.ShouldBind(&model); err != nil {
-		return model, err
-	}
-
-	return model, nil
 }
